Fixed Featured Section Mobile Scroll

--- a/src/app/pages/featured/featured.component.scss
+++ b/src/app/pages/featured/featured.component.scss
@@ -1,24 +1,22 @@
 @import "../../theme/general.scss";
 
 .cases {
-  min-height: 60vh; //fallback
+  min-height: 50vh; //fallback
   position: relative;
-  margin-bottom: 50px;
-  // @include media("<=tablet") {
-  //   height: 100%;
-  // }
+  margin-bottom: 65px;
   .cases-navigation {
     position: absolute;
-    top: 35%;
+    top: 42%;
     width: inherit;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 6;
-    padding: 37px;
+    padding: 0 37px;
     box-sizing: border-box;
     @include media("<=tablet") {
-      display: none;
+      // display: none;
+      padding: 0 16px;
     }
     .cases-arrow {
       background: rgba(0, 0, 0, 0.4);
@@ -47,7 +45,6 @@
       position: absolute;
       top: -30px;
       padding-left: 20px;
-      margin: 0 16px;
       box-sizing: border-box;
       font-weight: 400;
       font-size: 20px;
@@ -59,11 +56,12 @@
         padding-left: 10px;
         font-size: 16px;
         letter-spacing: 1.5px;
+        margin: 0 16px;
       }
     }
     .case {
       position: relative;
-      height: 100vh; //fallback
+      height: 100%;
       width: 33.33333vw;
       background: $black;
       cursor: pointer;
@@ -76,6 +74,11 @@
         width: 100vw;
         min-height: 50vh;
         padding: 0;
+        position: absolute;
+        z-index: 0;
+        &:nth-of-type(1) {
+          z-index: 1;
+        }
       }
       .case-details {
         display: flex;
@@ -90,7 +93,7 @@
           padding: 16px;
         }
         span {
-          margin-top: 156px;
+          margin-top: 200px;
           font-size: 1.6rem;
           opacity: 0.8;
           color: $white;
@@ -101,6 +104,7 @@
           @include media("<=phone") {
             font-size: 1.2rem;
             line-height: 2.2rem;
+            margin-top: 210px;
           }
         }
         h2 {
